Changelog Notes:
Fix Ascetic burning food too fast.