@@ -1,2 +1,7 @@
 Changelog Notes:
 Fix Ascetic burning food too fast.
+Fix Zombification Cure not setting infection correctly.
+Add Compatibility for Dynamic Traits
+Bloody Crowbar uses correct weapon model
+Alcoholic gets less fatigue from alcohol.
+Update Expert/Student Driver functions
